added reset for next year button, added email composer with mailto link, removed sending email state and logic since we're just opening the email client

--- a/index.html
+++ b/index.html
@@ -502,6 +502,52 @@
         window.location.href = mailtoLink;
       };
 
+      const handleResetForNextYear = async () => {
+        const confirmText = 'RESET';
+        const userInput = prompt(
+          `⚠️ WARNING: This will DELETE all ${entries.length} entries and reset all answers!\n\n` +
+          `Questions will be preserved.\n\n` +
+          `Make sure you've exported the results first!\n\n` +
+          `Type "${confirmText}" to confirm:`
+        );
+
+        if (userInput !== confirmText) {
+          alert('Reset cancelled');
+          return;
+        }
+
+        setLoading(true);
+
+        try {
+          // Delete all entries
+          const { error: deleteError } = await supabaseClient
+            .from('entries')
+            .delete()
+            .neq('id', 0); // Delete all rows
+
+          if (deleteError) throw deleteError;
+
+          // Reset correct answers
+          const { error: resetError } = await supabaseClient
+            .from('correct_answers')
+            .update({
+              answers_bits: 0,
+              answered_mask: 0,
+              actual_total_points: null
+            })
+            .eq('id', 1);
+
+          if (resetError) throw resetError;
+
+          setLoading(false);
+          alert('✓ Reset complete! Ready for next year.');
+          loadData();
+        } catch (error) {
+          setLoading(false);
+          alert('Error during reset: ' + error.message);
+        }
+      };
+
       // Entry Form
       if (view === 'entry') {
         return (
@@ -733,6 +779,14 @@
                     className="px-4 py-2 bg-purple-600 text-white rounded-lg hover:bg-purple-700 font-semibold"
                   >
                     📄 Export Results Page
+                  </button>
+
+                  <button
+                    onClick={handleResetForNextYear}
+                    disabled={loading}
+                    className="px-4 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700 font-semibold disabled:opacity-50"
+                  >
+                    🔄 Reset for Next Year
                   </button>
 
                   <button
