--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
       // Entry Form
       if (view === 'entry') {
         return (
-          <div className="min-h-screen bg-gradient-to-br from-blue-900 via-purple-900 to-blue-800 p-4">
+          <div className="min-h-screen bg-gradient-to-br from-blue-900 via-red-700 to-green-600 p-4">
             <div className="max-w-3xl mx-auto bg-white rounded-lg shadow-2xl p-6">
               <div className="flex items-center justify-between mb-6">
                 <div className="flex flex-col items-center w-full gap-4">
@@ -373,7 +373,7 @@
                   <button onClick={() => setView('scores')} className="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700">
                     View Scores
                   </button>
-                  <button onClick={() => setView('login')} className="px-4 py-2 bg-purple-600 text-white rounded-lg hover:bg-purple-700">
+                  <button onClick={() => setView('login')} className="px-4 py-2 bg-red-700 text-white rounded-lg hover:bg-red-800">
                     Admin
                   </button>
                 </div>
@@ -469,7 +469,7 @@
                 <button
                   onClick={handleSubmit}
                   disabled={loading || !formData.name || !formData.email || !formData.mobile || formData.answers.includes(null) || !formData.tiebreaker}
-                  className="w-full bg-gradient-to-r from-blue-600 to-purple-600 text-white py-3 rounded-lg font-semibold disabled:opacity-50 disabled:cursor-not-allowed"
+                  className="w-full bg-gradient-to-r from-red-700 to-green-600 text-white py-3 rounded-lg font-semibold disabled:opacity-50 disabled:cursor-not-allowed"
                 >
                   {loading ? 'Submitting...' : 'Submit Entry'}
                 </button>
@@ -487,7 +487,7 @@
       // Login View - also show login if trying to access admin while not logged in
       if (view === 'login' || (view === 'admin' && !isAdmin)) {
         return (
-          <div className="min-h-screen bg-gradient-to-br from-blue-900 via-purple-900 to-blue-800 p-4 flex items-center justify-center">
+          <div className="min-h-screen bg-gradient-to-br from-blue-900 via-red-700 to-green-600 p-4 flex items-center justify-center">
             <div className="bg-white rounded-lg shadow-2xl p-8 w-full max-w-md">
               <div className="flex items-center gap-3 mb-6">
                 <Lock />
@@ -524,7 +524,7 @@
                 <button
                   onClick={handleLogin}
                   disabled={loading}
-                  className="w-full bg-purple-600 text-white py-3 rounded-lg font-semibold disabled:opacity-50"
+                  className="w-full bg-red-700 text-white py-3 rounded-lg font-semibold disabled:opacity-50"
                 >
                   {loading ? 'Logging in...' : 'Login'}
                 </button>
@@ -544,12 +544,12 @@
       if (view === 'admin') {
         if (!isAdmin) {
           return (
-            <div className="min-h-screen bg-gradient-to-br from-blue-900 via-purple-900 to-blue-800 p-4 flex items-center justify-center">
+            <div className="min-h-screen bg-gradient-to-br from-blue-900 via-red-700 to-green-600 p-4 flex items-center justify-center">
               <div className="bg-white rounded-lg shadow-2xl p-8">
                 <p className="text-gray-700 mb-4">Please log in to access the admin panel.</p>
                 <button
                   onClick={() => setView('login')}
-                  className="px-4 py-2 bg-purple-600 text-white rounded-lg hover:bg-purple-700"
+                  className="px-4 py-2 bg-red-700 text-white rounded-lg hover:bg-red-800"
                 >
                   Go to Login
                 </button>
@@ -559,7 +559,7 @@
         }
 
         return (
-          <div className="min-h-screen bg-gradient-to-br from-blue-900 via-purple-900 to-blue-800 p-4">
+          <div className="min-h-screen bg-gradient-to-br from-blue-900 via-red-700 to-green-600 p-4">
             <div className="max-w-full mx-auto bg-white rounded-lg shadow-2xl p-6">
               <div className="flex items-center justify-between mb-6">
                 <div className="flex items-center gap-3">
@@ -576,7 +576,7 @@
 
                   <button
                     onClick={() => setEditingQuestions(!editingQuestions)}
-                    className="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 flex items-center gap-2"
+                    className="px-4 py-2 bg-blue-900 text-white rounded-lg hover:bg-blue-950 flex items-center gap-2"
                   >
                     <Settings />
                     {editingQuestions ? 'Done Editing' : 'Edit Questions'}
@@ -627,13 +627,13 @@
                     <div className="flex gap-2">
                       <button
                         onClick={exportCorrectAnswers}
-                        className="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 text-sm font-semibold"
+                        className="px-4 py-2 bg-blue-900 text-white rounded-lg hover:bg-blue-950 text-sm font-semibold"
                       >
                         Export Answers
                       </button>
                       <button
                         onClick={exportQuestions}
-                        className="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 text-sm font-semibold"
+                        className="px-4 py-2 bg-blue-900 text-white rounded-lg hover:bg-blue-950 text-sm font-semibold"
                       >
                         Export Questions
                       </button>
@@ -726,7 +726,7 @@
                                 {updatingPayment === entry.id ? '...' : entry.paid ? 'PAID' : 'Unpaid'}
                               </button>
                             </td>
-                            <td className="px-3 py-3 text-lg font-bold text-purple-600">
+                            <td className="px-3 py-3 text-lg font-bold text-red-700">
                               {calculateScore(entry)}
                             </td>
 
@@ -764,7 +764,7 @@
       if (view === 'scores') {
         const sorted = [...entries].sort((a, b) => calculateScore(b) - calculateScore(a));
         return (
-          <div className="min-h-screen bg-gradient-to-br from-blue-900 via-purple-900 to-blue-800 p-4">
+          <div className="min-h-screen bg-gradient-to-br from-blue-900 via-red-700 to-green-600 p-4">
             <div className="max-w-7xl mx-auto bg-white rounded-lg shadow-2xl p-6">
               <div className="mb-6">
                 <div className="flex flex-col items-center gap-4 mb-6">
@@ -776,7 +776,7 @@
                   <h1 className="text-3xl font-bold">Live Scoreboard</h1>
                 </div>
                 <div className="flex justify-center mt-4">
-                  <button onClick={() => setView('entry')} className="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
+                  <button onClick={() => setView('entry')} className="px-4 py-2 bg-blue-900 text-white rounded-lg hover:bg-blue-950">
                     Back to Entry Form
                   </button>
                 </div>
@@ -808,7 +808,7 @@
                       <tr key={entry.id} className="border-b hover:bg-gray-50">
                         <td className="px-2 py-2 font-bold sticky left-0 bg-white z-10">{rank + 1}</td>
                         <td className="px-2 py-2 font-semibold sticky left-12 bg-white z-10">{entry.name}</td>
-                        <td className="px-2 py-2 text-center font-bold text-lg text-purple-600 sticky left-32 bg-white z-10">
+                        <td className="px-2 py-2 text-center font-bold text-lg text-red-700 sticky left-32 bg-white z-10">
                           {calculateScore(entry)}
                         </td>
                         {entry.answers.map((ans, i) => (
