--- a/index.html
+++ b/index.html
@@ -817,12 +817,12 @@
                   <h1 className="text-3xl font-bold">Admin Panel</h1>
                 </div>
                 <div className="flex gap-2">
-                  {/* Admin actions: export, open/close, edit, reset, logout */}
+                  {/* Admin actions: edit, open/close, export, reset, return */}
                   <button
-                    onClick={exportResultsPage}
-                    className="px-4 py-2 bg-purple-600 text-white rounded-lg hover:bg-purple-700 font-semibold"
+                    onClick={() => setEditingQuestions(!editingQuestions)}
+                    className="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 font-semibold"
                   >
-                    Export Results Page (HTML)
+                    {editingQuestions ? 'Done Editing Questions' : 'Edit Questions'}
                   </button>
 
                   <button
@@ -833,11 +833,10 @@
                   </button>
 
                   <button
-                    onClick={() => setEditingQuestions(!editingQuestions)}
-                    className="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 flex items-center gap-2"
+                    onClick={exportResultsPage}
+                    className="px-4 py-2 bg-purple-600 text-white rounded-lg hover:bg-purple-700 font-semibold"
                   >
-                    <Settings />
-                    {editingQuestions ? 'Done Editing' : 'Edit Questions'}
+                    Export Results Page (HTML)
                   </button>
 
                   <button
@@ -853,10 +852,9 @@
                       setIsAdmin(false);
                       setView('entry');
                     }}
-                    className="px-4 py-2 bg-gray-600 text-white rounded-lg hover:bg-gray-700 flex items-center gap-2"
+                    className="px-4 py-2 bg-gray-600 text-white rounded-lg hover:bg-gray-700 font-semibold"
                   >
-                    <LogOut />
-                    Logout
+                    Return to Entry Page
                   </button>
                 </div>
               </div>
